--- a/package.json
+++ b/package.json
@@ -3,15 +3,28 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon server.js"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^16.3.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "mongoose": "^7.3.1",
+    "mongoose": "^5.13.19",
     "morgan": "~1.9.1"
-  }
+  },
+  "main": "app.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/santiagobravin996/proyecto-ecommerce-joyeria.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/santiagobravin996/proyecto-ecommerce-joyeria/issues"
+  },
+  "homepage": "https://github.com/santiagobravin996/proyecto-ecommerce-joyeria#readme",
+  "description": ""
 }
